Updated pom to accomplish compile.  Corrected compile plugin version and "opens" access in plugins.